# research-ir

./: .gitignore  README.md  justfile  pyproject.toml
docs/: common-ir.md
fixtures/: add.cir  factorial.cir  lean_inc.cir
frontends/haskell/: core-to-ir.cabal
frontends/haskell/app/: Main.hs
frontends/haskell/examples/: Add.hi  Add.hs  Corpus.hi  Corpus.hs
frontends/lean/: Dump.lean
ml/: build_dataset.py  corpus.py  dataset.json  make_kaggle_notebook.py  train.py  train_t5.py
notebooks/: demo.ipynb  research-ir-notebook.ipynb
research_ir/: __init__.py  ir.py
tests/: test_cross_language.py  test_haskell_frontend.py  test_ir.py
