[project]
name = "research-ir"
version = "0.1.0"
description = ""
authors = [
    {name = "Aizat", email = "aizat@example.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "transformers (>=5.10.1,<6.0.0)",
    "torch (>=2.12.0,<3.0.0)",
    "notebook (>=7.5.6,<8.0.0)"
]


[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
nbconvert = ">=7.0,<8.0"
ipykernel = ">=6.0,<7.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
