cabal-version:      2.4
name:               core-to-ir
version:            0.1.0
synopsis:           Haskell frontend: GHC Core -> общий IR (sexpr)
build-type:         Simple

executable core-to-ir
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base
                    , ghc
                    , ghc-paths
    default-language: Haskell2010
    ghc-options:      -Wall -Wno-unused-imports
